test/errors/error4.base
Error: /Users/leonardo/Development/vult/vult/test/errors/error4.vult:2:14-14: After ':' you can only have a function call e.g. foo()
fun foo() {
   _ = foo:foo;
              ^
